[package]
name = "neural-how"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] } # https://crates.io/crates/clap
reqwest = { version = "0.11.10", features = ["blocking", "json"] } # https://crates.io/crates/reqwest
openssl = { version = "0.10", features = ["vendored"] } # https://crates.io/crates/openssl
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
simple-error = "0.2.3"
log = "0.4.14"
env_logger = "0.9.0"
